# autoencoder-research

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  dam_mert330m_1k_5s.yaml  same_s.yaml  smoke_test.yaml  smoke_test_mert330m_1k_5s_3epoch.yaml  smoke_test_mert330m_1k_5s_5epoch.yaml  smoke_test_mert95m_1k_3s_45epoch.yaml  smoke_test_mert95m_1k_5s_1epoch.yaml  smoke_test_mert95m_1k_5s_5epoch.yaml  smoke_test_preprocessed.yaml
docs/: SAME_TRAINING.md  ae_evaluate.md  sa3_same_baseline.md  sao_vae_baseline.md
src/ae_research/: __init__.py  config.py
src/ae_research/cli/: __init__.py  evaluate.py  evaluate_sa3_same.py  evaluate_stable_audio_vae.py  mushra.py  prepare_mtg_jamendo.py  preprocess_audio.py  sample_manifest.py  train.py
src/ae_research/data/: __init__.py  dataset.py  mtg_jamendo.py  preprocess.py  sampling.py
src/ae_research/diffusion/: __init__.py
src/ae_research/evaluation/: __init__.py  evaluator.py  mushra.py  sa3_same.py  stable_audio_vae.py
src/ae_research/losses/: __init__.py  same.py
src/ae_research/metrics/: __init__.py  audio.py
src/ae_research/models/: __init__.py  autoencoder.py  decoder.py  detail_aware.py  mert.py  same_autoencoder.py
src/ae_research/training/: history.py  trainer.py
tests/: test_data.py  test_detail_aware.py  test_evaluate_cli.py  test_manifest_sampling.py  test_metrics_audio.py  test_model_and_losses.py  test_preprocess_audio.py  test_sa3_same_evaluation.py  test_training_checkpoints.py
